--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <li>Follow the <a href="docs/getting-started.html">Getting Started</a> guide to get up and running.</li>
 <li>Explore the <a href="api/TS.PageSlider.html">API Reference</a> for more details.</li>
 <li>Modify the source code available on <a href="https://github.com/tomazsaraiva/unity-canvas-page-slider">GitHub</a>.</li>
-<li>Install directly from the <a href="TODO">Unity Asset Store</a>.</li>
+<li>Install directly from the <a href="https://assetstore.unity.com/packages/tools/gui/page-slider-241341">Unity Asset Store</a>.</li>
 <li>Get in touch with me at <a href="https://tomazsaraiva.com">tomazsaraiva.com</a>.</li>
 </ul>
 </article>
